--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-resizable-panels": "^2.1.3",
+    "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.7",
     "shadcn-ui": "^0.9.4",
